--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <link rel="icon" href="https://haxe.org/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" type="image/x-icon" href="http://www.haxe.org/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://www.haxe.org/favicon.ico" />
 
   <title>Try Haxe !</title>
   <meta name="description" content="Haxe is an amazing multiplatform programming language. Check it out !">
   <meta name="author" content="Haxe Community">
-  <meta property="og:image" content="http://try.haxe.org/share.png" />
+  <meta property="og:image" content="https://try.haxe.org/share.png" />
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -27,8 +27,8 @@
   <link rel="stylesheet" type="text/css" href="https://haxe.org/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-responsive.min.css" />
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,700italic,400italic' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css">
 
 
   <link rel="stylesheet" href="lib/CodeMirror-4/lib/codemirror.css"/>
@@ -93,9 +93,9 @@
 							<li><a href="https://haxe.org/documentation/">Introduction</a></li>
 							<li class="divider"></li>
 							<li><a href="https://haxe.org/manual/">Manual</a></li>
-							<li><a href="http://api.haxe.org">API Documentation</a></li>
+							<li><a href="https://api.haxe.org">API Documentation</a></li>
 							<li class="divider"></li>
-							<li class="active"><a href="http://try.haxe.org">Try Haxe</a></li>
+							<li class="active"><a href="https://try.haxe.org">Try Haxe</a></li>
 							<li><a href="https://lib.haxe.org">Haxelib</a></li>
 							<li><a href="http://code.haxe.org">Code Cookbook</a></li>
 						</ul>
@@ -105,9 +105,9 @@
 						<ul class="dropdown-menu">
 							<li><a href="https://github.com/clemos/try-haxe/"><i class="fa fa-github"></i> Github</a></li>
 							<li><a href="https://github.com/clemos/try-haxe/issues"><i class="fa fa-github"></i> Bug reports</a></li>
-							<li><a href="http://stackoverflow.com/questions/tagged/haxe"><i class="fa fa-stack-exchange"></i> Stack Overflow</a></li>
-							<li><a href="http://groups.google.com/group/haxelang?hl=en"><i class="fa fa-envelope-o"></i> Google Groups</a></li>
-							<li><a href="http://webchat.freenode.net/?channels=haxe"><i class="fa fa-comments-o"></i> IRC</a></li>
+							<li><a href="https://stackoverflow.com/questions/tagged/haxe"><i class="fa fa-stack-exchange"></i> Stack Overflow</a></li>
+							<li><a href="https://groups.google.com/group/haxelang?hl=en"><i class="fa fa-envelope-o"></i> Google Groups</a></li>
+							<li><a href="https://webchat.freenode.net/?channels=haxe"><i class="fa fa-comments-o"></i> IRC</a></li>
 							<li><a href="https://haxe.org/blog"><i class="fa fa-rss"></i> Blog</a></li>
 							<li class="divider"></li>
 							<li><a href="https://plus.google.com/communities/103302587329918132234"><i class="fa fa-google-plus"></i> Google+</a></li>
@@ -192,7 +192,7 @@ class Test {
             </div>
 			      <div class="tab-pane" id="hx-about">
               <h2>Try Haxe <small>- The Haxe Playground</small></h2>
-              <a href="https://haxe.org" target="_blank" title="Haxe"><img src="http://www.haxe.org/img/haxe-logo.svg" class="logo" onerror="this.src='http://www.haxe.org/img/haxe-logo.png'" width="90" height="90" /></a>
+              <a href="https://haxe.org" target="_blank" title="Haxe"><img src="/haxe-logo.svg" class="logo" onerror="this.src='/haxe-logo.png'" width="90" height="90" /></a>
               
               <strong><a href="https://haxe.org" target="_blank" title="Haxe">Haxe</a></strong> is an awesome language that compiles to <strong>Javascript</strong>, <strong>Flash</strong>, <strong>C++</strong>, <strong>PHP</strong>, <strong>Neko</strong>, <strong>Java</strong>, <strong>C#</strong> and <strong>Python</strong>.
               It thus allows to write applications that target native <strong>iOS</strong>, <strong>Android</strong> as well as traditional browsers (<strong>HTML5</strong> or <strong>SWF</strong>), servers and desktops (Mac, PC or Linux).
@@ -250,7 +250,7 @@ class Test {
       <div class="social span6">
         <div class="row-fluid">
           <div class="span3 span-plusone">
-            <g:plusone size="medium" href="http://try.haxe.org"></g:plusone>
+            <g:plusone size="medium" href="https://try.haxe.org"></g:plusone>
           </div>
 
           <div class="span3 span-twitter">
