--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <link rel="icon" href="https://haxe.org/favicon.ico" type="image/x-icon"/>
-  <link rel="shortcut icon" type="image/x-icon" href="https://www.haxe.org/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://haxe.org/favicon.ico" />
 
   <title>Try Haxe !</title>
   <meta name="description" content="Haxe is an amazing multiplatform programming language. Check it out !">
