--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:image" content="https://try.haxe.org/share.png" />
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="stylesheet" type="text/css" href="https://haxe.org/css/bootstrap.min.css"/>
